Tue Jun 11 08:49:29 1996    <layer@hobart.franz.com>

	* fi-emacs19.el: fix last change (making menubar buffer-local)
	since it caused slowness when starting up the buffer's mode

	* fi-site-init.el: use fi::load instead of load everywhere, since
	it compiles and loads files on windows

Wed Jun 05 13:30:38 1996    <layer@hobart.franz.com>

	* fi-xemacs.el:
	* fi-emacs19.el: don't put composer on menubar on Windows

	* fi-modes.el: New function fi::kill-all-local-variables which is
	used instead of kill-all-local-variables to wipe the slate of
	local variables in a buffer before using it.  The only thing this
	function does over the GNU Emacs version is that it preserves the
	input-ring (previously typed input) in subprocess buffers.
	* fi-rlogin.el: see fi-modes.el change
	* fi-shell.el: see fi-modes.el change
	* fi-su.el: see fi-modes.el change
	* fi-telnet.el: see fi-modes.el change

Tue Jun  4 13:47:26 1996  Kevin Layer  <layer@freezer>

	* fi-xemacs.el: define find-buffer-visiting, used by fi-changes.el

Tue Jun  4 13:36:48 1996  Kevin Layer  <layer@freezer>

	* fi-emacs19.el: 
	* fi-xemacs.el: make menubar changes buffer local to fi: moded
	buffers
	* fi-modes.el: support for above

Fri May 31 12:06:13 1996  Kevin Layer  <layer@freezer>

	* fi-modes.el: fix doc string per an spr

Fri May 31 11:36:32 1996    <layer@hobart.franz.com>

	* fi-shell.el: for emacs 19.31 on windows
	* fi-subproc.el: for windows
	* fi-version.el: fix on-ms-windows function

Tue May 21 13:04:00 1996  layer  (layer at HOBART)

	* fi-keys.el: rfe2356: duplicate global bindings on C-c

Thu May 16 14:48:48 1996  layer  (layer at HOBART)

	* fi-keys.el: undo hacks for key bindings--they turn out to be
	only necessary for me because of my moving the escape key (to
	~/`); also, undo editi hacks
	* fi-site-init.el: add comments, fix fi::load to do the compile
	even if the .elc exists but is older than the .el
	* fi-subproc.el: for windows

Wed May 15 16:34:58 1996  layer  (layer at HOBART)
