@@ -1,3 +1,7 @@
+Fri Jun 21 10:35:39 1996  Kevin Layer  <layer@freezer>
+
+	* fi-sublisp.el: fix doc string
+
 Tue Jun 11 08:49:29 1996    <layer@hobart.franz.com>
 
 	* fi-emacs19.el: fix last change (making menubar buffer-local)
@@ -305,7 +309,6 @@ Thu Dec  8 14:16:49 1994  Steve Haflich  (smh@vapor)
 	* fi-stream.el:
 	Document the FSF 19 *background-interaction* difficulty.
 
->>>>>>> /tmp/T4a05180
 Wed Sep 21 15:37:08 1994  Steve Haflich  (smh@vapor)
 
 	* fi-site-init.el: Version 2.0.13. (actually 2.0.14 - smh 19Dec94)
